<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.FAQsFragment"
    android:background="@color/app_background_color"
    android:scrollbars="vertical"
    android:paddingBottom="60dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_one"
            android:textSize="18sp"
            android:textColor="@color/purple_500" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_one"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2.5dp"
            android:background="@color/purple_500"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_two"
            android:textSize="18sp"
            android:textColor="@color/purple_500" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_two"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2.5dp"
            android:background="@color/purple_500"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_three"
            android:textSize="18sp"
            android:textColor="@color/purple_500" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_three"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2.5dp"
            android:background="@color/purple_500"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_four"
            android:textSize="18sp"
            android:textColor="@color/purple_500" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_four"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2.5dp"
            android:background="@color/purple_500"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_five"
            android:textSize="18sp"
            android:textColor="@color/purple_500" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_five"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2.5dp"
            android:background="@color/purple_500"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_six"
            android:textSize="18sp"
            android:textColor="@color/purple_500" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_six"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2.5dp"
            android:background="@color/purple_500"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</ScrollView>